testing memcached:alpine3.23

--- a/.github/workflows/test-grype-scan.yaml
+++ b/.github/workflows/test-grype-scan.yaml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         image:
-          - nginx:latest
+          - memcached:alpine3.23
           # - alpine:latest
           # - python:3.12-slim
           # - node:20-alpine
