Fix summary generation to parse both JSON and SARIF formats

--- a/.github/workflows/test-grype-scan.yaml
+++ b/.github/workflows/test-grype-scan.yaml
@@ -18,8 +18,8 @@ jobs:
       fail-fast: false
       matrix:
         image:
-          - memcached:alpine3.23
-          # - alpine:latest
+          # - memcached:alpine3.23
+          - alpine:latest
           # - python:3.12-slim
           # - node:20-alpine
     steps:
