--- a/grype-scan/action.yaml
+++ b/grype-scan/action.yaml
@@ -62,9 +62,12 @@ runs:
         echo "**Severity Cutoff:** ${{ inputs.severity-cutoff }}" >> "$GITHUB_STEP_SUMMARY"
         echo "" >> "$GITHUB_STEP_SUMMARY"
 
-        if [ -f "${{ steps.grype-scan.outputs.json }}" ]; then
-          # Parse JSON and create summary table
-          VULNS=$(jq -r '.matches // [] | length' "${{ steps.grype-scan.outputs.json }}")
+        JSON_FILE="${{ steps.grype-scan.outputs.json }}"
+        SARIF_FILE="${{ steps.grype-scan.outputs.sarif }}"
+
+        if [ -f "$JSON_FILE" ]; then
+          # Parse JSON format
+          VULNS=$(jq -r '.matches // [] | length' "$JSON_FILE")
 
           if [ "$VULNS" -eq 0 ]; then
             echo "### ✅ No Vulnerabilities Found" >> "$GITHUB_STEP_SUMMARY"
@@ -75,9 +78,30 @@ runs:
             echo "|---------|------------------|----------|-------------------|---------------|" >> "$GITHUB_STEP_SUMMARY"
 
             jq -r '.matches[] |
-              "\(.artifact.name) | \(.vulnerability.id) | \(.vulnerability.severity) | \(.artifact.version) | \(.vulnerability.fix.versions[0] // "N/A")"' \
-              "${{ steps.grype-scan.outputs.json }}" | \
-              head -n 50 >> "$GITHUB_STEP_SUMMARY"
+              "| \(.artifact.name) | \(.vulnerability.id) | \(.vulnerability.severity) | \(.artifact.version) | \(.vulnerability.fix.versions[0] // "N/A") |"' \
+              "$JSON_FILE" | head -n 50 >> "$GITHUB_STEP_SUMMARY"
+
+            if [ "$VULNS" -gt 50 ]; then
+              echo "" >> "$GITHUB_STEP_SUMMARY"
+              echo "_Showing first 50 vulnerabilities. See artifact for full results._" >> "$GITHUB_STEP_SUMMARY"
+            fi
+          fi
+        elif [ -f "$SARIF_FILE" ]; then
+          # Parse SARIF format
+          VULNS=$(jq -r '.runs[0].results // [] | length' "$SARIF_FILE")
+
+          if [ "$VULNS" -eq 0 ]; then
+            echo "### ✅ No Vulnerabilities Found" >> "$GITHUB_STEP_SUMMARY"
+          else
+            echo "### 🔍 Vulnerabilities Found: $VULNS" >> "$GITHUB_STEP_SUMMARY"
+            echo "" >> "$GITHUB_STEP_SUMMARY"
+            echo "| Vulnerability ID | Severity | Description |" >> "$GITHUB_STEP_SUMMARY"
+            echo "|------------------|----------|-------------|" >> "$GITHUB_STEP_SUMMARY"
+
+            jq -r '
+              .runs[0].results[] |
+              "| \(.ruleId) | \(.properties.security-severity // "N/A") | \(.message.text | split("\n")[0] | .[0:80]) |"
+            ' "$SARIF_FILE" | head -n 50 >> "$GITHUB_STEP_SUMMARY"
 
             if [ "$VULNS" -gt 50 ]; then
               echo "" >> "$GITHUB_STEP_SUMMARY"
