added multiple images for scans

--- a/.github/workflows/test-grype-scan.yaml
+++ b/.github/workflows/test-grype-scan.yaml
@@ -19,9 +19,9 @@ jobs:
       matrix:
         image:
           - memcached:alpine3.23
-          # - alpine:latest
-          # - python:3.12-slim
-          # - node:20-alpine
+          - alpine:latest
+          - python:3.12-slim
+          - node:20-alpine
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
