enable fail-build on critical severity

--- a/.github/workflows/test-grype-scan.yaml
+++ b/.github/workflows/test-grype-scan.yaml
@@ -30,6 +30,6 @@ jobs:
         uses: ./grype-scan
         with:
           image: ${{ matrix.image }}
-          severity-cutoff: medium
-          fail-build: 'false'
+          severity-cutoff: critical
+          fail-build: 'true'
           output-format: sarif
