--- a/.github/workflows/test-trivy-scan.yaml
+++ b/.github/workflows/test-trivy-scan.yaml
@@ -30,5 +30,5 @@ jobs:
         uses: ./trivy-scan
         with:
           image: ${{ matrix.image }}
-          severity: 'CRITICAL'
-          exit-code: '1'
+          severity: 'CRITICAL,HIGH'
+          exit-code: '0'
